--- a/index.html
+++ b/index.html
@@ -39,9 +39,27 @@
             </style>
         </head>
         <body>
-            <canvas id="glcanvas" tabindex='1'></canvas>
+            <canvas id="glcanvas" tabindex='1' hidden></canvas>
             <script src="https://not-fl3.github.io/miniquad-samples/mq_js_bundle.js"></script>
-            <script>load("pkg/db_test.wasm");</script>
+            <script type="module">
+        import init, { set_wasm } from "./pkg/db_test.js";
+        async function impl_run() {
+            let wbg = await init();
+            miniquad_add_plugin({
+                register_plugin: (a) => (a.wbg = wbg),
+                on_init: () => set_wasm(wasm_exports),
+                version: "0.0.1",
+                name: "wbg",
+            });
+            load("./pkg/db_test_bg.wasm");
+        }
+          // Auto-run when page loads
+        window.addEventListener('load', function() {
+            document.getElementById("glcanvas").removeAttribute("hidden");
+            document.getElementById("glcanvas").focus();
+            impl_run();
+        });
+    </script>
         </body>
         </html>
         
